added google analytics tag

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -15,6 +15,16 @@
     <meta name="googlebot" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25H96BFWYG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-25H96BFWYG');
+    </script>
+
     <!-- White Flash Prevention Script -->
     <script type="text/javascript" src="/scripts/initialize-theme.js"></script>
 
